from plugin dialog for first time.
+Fix command entry listing of paths (patch from hasan.aljudy).
+Fix autocompletion for when accented characters are in the command string
 (modified patch from roman.chyla).
+Fix some unicode handling issues in search/replace. (patch from roman.chyla)
+Fix number of printout rendering issues.
+Update readonly status when permissions change on disk.

#-----------------------------------------------------------------------------#

VERSION 0.4.75
DATE 03/28/2009
24th Alpha Release

NEWS:

This release fixes a handful of important bugs and new features. The Plugin
Manager dialog has been completely reworked. Configuration options for plugins
that provide them are now available in the dialog as well as better error
reporting for plugins that could not properly be loaded.

File session support has also been improved to allow for saving and loading of 
multiple custom sessions. Due to format changes the upgrade will require any
session from previous installations to be overwritten.

NEW: [features/enhancments]
+New Plugin Manager Dialog.
+Improved configuration options for plugins.
+Incompatible plugins are now displayed in PluginManager with message explaining why.
+Some basic autocompletion support for CSS.
+Improved support for sessions. Multiple custom sessions can not be saved and
reloaded (modified code from Erik Tollerud).
+Add shortcut for LineDelete to delete line without modifying clipboard.
+Add option for automatically reloading files when they have changed on disk.
+Remember last save location when opening save as dialog.

BUG FIXES:
+Fix incorrect page count shown in print previews.
+Remember print settings throughout session and for every frame.
+Fix error when doing Copy Path from tab right click menu.
+Fix incorrectly showing autocompletion options under some cases in php files.
+Fix condition where window could be placed at (0, 0) on OSX which causes the
 frame to be placed behind the menubar.